# multibox-api

./: .env.vault  .eslintrc.js  .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json
migrations/2024-05-16-000657_users/: down.sql  up.sql
migrations/2024-05-16-000658_groups/: down.sql  up.sql
migrations/2024-05-19-173125_messages/: down.sql  up.sql
migrations/2024-05-19-173126_sorting_ranks/: down.sql  up.sql
migrations/2024-05-19-173402_messages/: up.sql
migrations/2024-05-19-175247_inbox_labels/: down.sql  up.sql
migrations/2024-05-19-175958_audit_log/: down.sql  up.sql
migrations/2024-05-28-163408_unique_email_constraint/: down.sql  up.sql
migrations/2024-06-21-194001_separate_nylas_grants/: down.sql  up.sql
migrations/2024-06-21-194426_simplify_sort_groups/: down.sql  up.sql
migrations/2024-06-28-184219_add_grant_id_to_inbox_grants/: down.sql  up.sql
migrations/2024-07-10-213400_include_email_details_inbox_grants/: down.sql  up.sql
migrations/2024-07-10-220142_add_last_login_for_users_table/: down.sql  up.sql
prisma/: schema.prisma
src/: app.module.ts  config.rs  errors.rs  main.rs  main.ts  routes.rs  schema.rs
src/auth/: auth.controller.ts  auth.module.ts  jwt.strategy.spec.ts  jwt.strategy.ts
src/auth/dto/: callback.dto.ts
src/auth/interfaces/: jwt-payload.interface.ts
src/common/interfaces/: json-object.interface.ts
src/common/middleware/: logger.middleware.ts
src/common/utils/: custom.error.ts
src/common/utils/enums/: headers.ts  service-error-codes.ts
src/config/: app.config.ts  auth.config.ts  nylas.config.ts
src/db/: prisma-extended.client.ts  prisma.extensions.ts  prisma.service.ts
src/domain/: users.rs
src/domain/models/: mod.rs
src/domain/models/nylas/: grants.rs  messages.rs  threads.rs
src/domain/models/toodle/: auth.rs  groups.rs  inbox_grants.rs  inbox_labels.rs  messages.rs  mod.rs  users.rs
src/domain/multibox/users/: user.controller.ts  user.service.ts
src/domain/nylas/: nylas.module.ts  nylas.service.ts
src/domain/sorta/inbox-grants/: inbox-grants.controller.spec.ts  inbox-grants.controller.ts  inbox-grants.module.ts  inbox-grants.service.spec.ts  inbox-grants.service.ts
src/domain/sorta/users/: user.controller.ts  user.service.ts  users.module.ts
src/handlers/: mod.rs
src/handlers/middleware/: authorize.rs
src/handlers/nylas/: grants.rs  messages.rs  mod.rs  threads.rs
src/handlers/toodle/: group.rs  inbox_grant.rs  messages.rs  mod.rs  user.rs
src/infra/: errors.rs  mod.rs
src/infra/db/: schema.rs
src/infra/repositories/: group_repository.rs  inbox_grant_repository.rs  mod.rs  user_repository.rs
src/middleware/: logger.middleware.ts
src/utils/: auth_utils.rs  json_extractor.rs  jwks_utils.rs  mod.rs  path_extractor.rs
(+27 files in other folders)
