[package]
name = "sorta-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-macros = "0.4.1"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.1.6", features = ["postgres","uuid","serde_json"] }
diesel_migrations = "2"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1"
jsonwebtoken = "9.3.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.5.2", features = ["full"] }
uuid = { version = "1.3.0", features = ["fast-rng", "v4", "serde"] }
hex_color = "3"
reqwest = { version = "0.12.5", features = ["json"] }
aes-gcm = "0.10.3"
hex = "0.4.3"
serde_path_to_error = "0.1"